dnl Process this file with autoconf to produce a configure script.
AC_INIT(iomedley.h)
dnl AM_CONFIG_HEADER(iom_config.h)
AC_CONFIG_HEADER(iom_config.h)

AC_CONFIG_AUX_DIR(aux)
AC_CANONICAL_HOST
AC_CANONICAL_SYSTEM

dnl AM_INIT_AUTOMAKE(iomedley, 1.0)
dnl PACKAGE(iomedley)
dnl VERSION(1.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Initialize libtool and tell it to generate static libraries
dnl AM_DISABLE_SHARED
dnl AM_PROG_LIBTOOL

AC_AIX

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_STRUCT_TM

dnl Check for endian
AC_C_BIGENDIAN
if test $ac_cv_c_bigendian = yes; then
	AC_DEFINE(_BIG_ENDIAN)
else
	AC_DEFINE(_LITTLE_ENDIAN)
fi

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(math.h string.h strings.h)

dnl Check for X
AC_PATH_XTRA

CPPFLAGS="$CPPFLAGS $X_CFLAGS"
LIBS="$LIBS $X_PRE_LIBS $X_LIBS $X_EXTRA_LIBS"

AC_CHECK_LIB(X11, XOpenDisplay)
AC_CHECK_LIB(Xt, XtToolkitInitialize)
AC_CHECK_LIB(Xext, XShmPutImage)


dnl Checks for libraries.
if test "$prefix" != "NONE" 
then
	CPPFLAGS="$CPPFLAGS -I${prefix:-.}/include "
	LDFLAGS="$LDFLAGS -L${prefix:-.}/lib"
fi

AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(z, compress)
AC_CHECK_LIB(bz2, bzopen)
AC_CHECK_LIB(png, png_info_init)
AC_CHECK_LIB(jpeg, jpeg_read_header)
AC_CHECK_LIB(tiff, TIFFOpen)
AC_CHECK_LIB(Magick, GetMagickInfo)

dnl Checks for library functions.
AC_FUNC_MMAP
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(strdup strerror strspn strstr)
AC_CHECK_FUNCS(strcasecmp strncasecmp)
AC_FUNC_ALLOCA

dnl Get a list of libiomedley.la source objects
dnl Xsed="sed -e s/^X// "
dnl LTLIBOBJS=`echo X"$LIBOBJS" | $Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*\$,.lo,"`

dnl Substitute the following additional variables
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)
dnl AC_SUBST(LTLIBOBJS)
dnl AC_SUBST(LTALLOCA)

AC_OUTPUT(Makefile)
