dnl Process this file with autoconf to produce a configure script.
AC_INIT(iomedley.h)
dnl AM_CONFIG_HEADER(iom_config.h)
AC_CONFIG_HEADER(iom_config.h)

AC_CONFIG_AUX_DIR(aux)
AC_CANONICAL_HOST
AC_CANONICAL_SYSTEM

dnl AM_INIT_AUTOMAKE(iomedley, 1.0)
dnl PACKAGE(iomedley)
dnl VERSION(1.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Initialize libtool and tell it to generate static libraries
dnl AM_DISABLE_SHARED
dnl AM_PROG_LIBTOOL

AC_AIX

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_STRUCT_TM

dnl Check for endian
AC_C_BIGENDIAN
dnl if test $ac_cv_c_bigendian = yes; then
dnl 	AC_DEFINE(_BIG_ENDIAN)
dnl else
dnl 	AC_DEFINE(_LITTLE_ENDIAN)
dnl fi

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(math.h string.h strings.h)

dnl Check for X
AC_PATH_XTRA

CPPFLAGS="$CPPFLAGS $X_CFLAGS"
LIBS="$LIBS $X_PRE_LIBS $X_LIBS $X_EXTRA_LIBS"

AC_CHECK_LIB(X11, XOpenDisplay)
AC_CHECK_LIB(Xt, XtToolkitInitialize)
AC_CHECK_LIB(Xext, XShmPutImage)


dnl Check if ImageMagick is available.

AC_PATH_PROG(MAGICK_CONFIG,Magick-config)
if test -n "$MAGICK_CONFIG"
then
	MAGICK_VERSION=`$MAGICK_CONFIG --version`
	MAGICK_CPPFLAGS=`$MAGICK_CONFIG --cppflags`
	MAGICK_CFLAGS=`$MAGICK_CONFIG --cflags`
	MAGICK_LIBS=`$MAGICK_CONFIG --libs`
	MAGICK_LDFLAGS=`$MAGICK_CONFIG --ldflags`
fi

dnl Check if ImageMagick is of correct version
if test "$MAGICK_VERSION" = "4.2.9"
then
	save_CPPFLAGS="$CPPFLAGS"
	save_CFLAGS="$CFLAGS"
	save_LIBS="$LIBS"
	save_LDFLAGS="$LDFLAGS"

	CPPFLAGS="$CPPFLAGS $MAGICK_CPPFLAGS"
	CFLAGS="$CFLAGS $MAGICK_CFLAGS"
	LIBS="$LIBS $MAGICK_LIBS"
	LDFLAGS="$LDFLAGS $MAGICK_LDFLAGS"

	dnl AC_CHECK_LIB(m, sin)
	dnl AC_CHECK_LIB(z, compress)
	dnl AC_CHECK_LIB(bz2, bzopen)
	dnl AC_CHECK_LIB(png, png_info_init)
	dnl AC_CHECK_LIB(jpeg, jpeg_read_header)
	dnl AC_CHECK_LIB(tiff, TIFFOpen)

	dnl Make sure we can use libMagick to compile.
	AC_CHECK_LIB(Magick, GetMagickInfo,,[
		CPPFLAGS="$save_CPPFLAGS"
		CFLAGS="$save_CFLAGS"
		LIBS="$save_LIBS"
		LDFLAGS="$save_LDFLAGS"
	])
fi

dnl Checks for library functions.
AC_FUNC_MMAP
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(strdup strerror strspn strstr)
AC_CHECK_FUNCS(strcasecmp strncasecmp)
AC_FUNC_ALLOCA

dnl Get a list of libiomedley.la source objects
dnl Xsed="sed -e s/^X// "
dnl LTLIBOBJS=`echo X"$LIBOBJS" | $Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*\$,.lo,"`

dnl Substitute the following additional variables
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)
dnl AC_SUBST(LTLIBOBJS)
dnl AC_SUBST(LTALLOCA)

AC_OUTPUT(Makefile)
